[tool.poetry]
name = "orbit_graph"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"

black = "^20.8b1"
pytest-black = "^0.3.12"
pymgclient = "^1.0.0"
Flask = "^2.0.1"
pandas = "^1.3.2"
simplejson = "^3.17.4"
[tool.poetry.dev-dependencies]
pytest = "^5.4"
flake8 = "^3.7.9"
pytest-pylint = "^0.17.0"
pytest-timeout = "^1.4.1"
pytest-cov = "^2.10.0"
pytest-benchmark = "^3.2.3"
pytest-flake8 = "^1.0.6"
mypy = "^0.812"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
